objects/tspa__Visual_Image__c.object
<CustomObject>
    <description>Used to store image related information used on Visual History component.</description>
    <fields>
        <fullName>tspa__ContentModifiedDate__c</fullName>
        <label>Content Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tspa__File_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>File Name</label>
        <length>254</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tspa__Image_Status__c</fullName>
        <label>Image Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Pending Deletion</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Error State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__OCR_Value__c</fullName>
        <label>OCR Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Related_Tags__c</fullName>
        <label>Related Tags</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tspa__Session_Id__c</fullName>
        <label>Session Id</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Visual_History__c</fullName>
        <label>Visual History</label>
        <referenceTo>tspa__Visual_History__c</referenceTo>
        <relationshipName>Visual_Images</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tspa__fileUrl__c</fullName>
        <label>fileUrl</label>
        <length>121072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Visual Remote Assistant Reports Images</label>
    <listViews>
        <fullName>tspa__All</fullName>
        <columns>NAME</columns>
        <columns>tspa__File_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>tspa__Related_Tags__c</columns>
        <columns>tspa__Session_Id__c</columns>
        <columns>tspa__Visual_History__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Visual Images Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant Reports Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>